--- a/main.css
+++ b/main.css
@@ -22,18 +22,23 @@ body {
 
 h1 {
     font-family: "Oswald", sans-serif;
-    color: #ffffff;
+    color:rgb(255, 255, 255);
     margin-top: 0;
     text-align: center;
+        
 }
 
 h2 {
+    font-family: "Oswald", sans-serif;
     color: rgb(255, 105, 44);
     text-align: center;
 }
 
 h5 {
-    color: rgb(255, 105, 44);
+    font-family: "Oswald", sans-serif;
+    color: rgb(2, 2, 2);
+    margin-top: 1%;
+    
 }
 
 p {
@@ -54,6 +59,13 @@ p {
 
 .nuestro {
     padding: 20px;
+}
+
+.imagenes{
+    border: 5px solid #ffffff;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: auto;
 }
 
 /* Video */
@@ -246,3 +258,94 @@ video {
         width: 100%;
     }
 }
+
+/*ana*/
+
+/* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+
+.progress-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.left-panel, .right-panel {
+    flex: 1;
+    background-color: #ffe9e0;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    max-width: 300px;
+    text-align: center;
+}
+
+.campaigns {
+    flex: 3;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.campaign {
+    background-color: #fff;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    flex: 1;
+    max-width: 180px;
+    text-align: center;
+}
+
+.campaign h2 {
+    color: #ff8a65;
+}
+
+.campaign p {
+    margin: 5px 0;
+}
+
+.ana img, .success img {
+    width: 80px;
+    margin-bottom: 10px;
+}
+
+.success h2 {
+    color: #E65100;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .progress-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .campaigns {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .campaign {
+        max-width: 100%;
+    }
+
+    .left-panel, .right-panel {
+        max-width: 100%;
+    }
+}
+
