--- a/main.css
+++ b/main.css
@@ -5,9 +5,13 @@ body {
     font-size: 16px;
     color: #000000;
     line-height: 1.6;
-    margin: 0;
+    
     padding: 0;
     background-color: #f5f5f5;
+}
+.caja{
+    height: 1em;
+    margin: 50px;
 }
 
 .navbar {
